--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
  
   <!-- <base href="/"> -->
 
+  <!-- Social Media Meta Tags -->
+  <meta property="og:title" content="Ecoinsoft">
+  <meta property="og:description" content="We provide cutting-edge and effective solutions for your business. Transform your business into a digitalization hub and innovation. Make the IT simple">
+  <meta property="og:image" content="https://github.com/simkosal/Company-Website/blob/main/icons/android-chrome-192x192.png">
+  <meta property="og:url" content="https://simkosal.github.io/Company-Website/#/">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="We provide cutting-edge and effective solutions for your business. Transform your business into a digitalization hub and innovation. Make the IT simple">
@@ -13,7 +19,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="template_web_app">
+  <meta name="apple-mobile-web-app-title" content="Ecoinsoft">
   <link rel="apple-touch-icon" href="icons/android-chrome-192x192.png">
 
   <!-- Favicon -->
@@ -24,7 +30,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "2478785307";
+    var serviceWorkerVersion = "1797684295";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
