--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
  
   <!-- <base href="/"> -->
 
+
   <!-- Social Media Meta Tags -->
   <meta property="og:title" content="Ecoinsoft">
   <meta property="og:description" content="We provide cutting-edge and effective solutions for your business. Transform your business into a digitalization hub and innovation. Make the IT simple">
   <meta property="og:image" content="https://github.com/simkosal/Company-Website/blob/main/icons/android-chrome-192x192.png">
   <meta property="og:url" content="https://simkosal.github.io/Company-Website/#/">
+  <meta property="og:type" content="website">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -30,7 +32,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "2472668999";
+    var serviceWorkerVersion = "1639703185";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
