--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   <!-- Social Media Meta Tags -->
   <meta property="og:title" content="Ecoinsoft">
   <meta property="og:description" content="We provide cutting-edge and effective solutions for your business. Transform your business into a digitalization hub and innovation. Make the IT simple">
-  <meta property="og:image" content="https://github.com/simkosal/Company-Website/blob/main/icons/android-chrome-192x192.png">
+  <meta property="og:image" content="URL to Your Image">
+  <meta property="og:url" content="URL to Your Webpage">
+
+  <meta property="og:title" content="Ecoinsoft">
+  <meta property="og:description" content="We provide cutting-edge and effective solutions for your business. Transform your business into a digitalization hub and innovation. Make the IT simple">
+  <meta property="og:image" content="icons/langding.png">
   <meta property="og:url" content="https://simkosal.github.io/Company-Website/#/">
   <meta property="og:type" content="website">
 
@@ -32,7 +37,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "1639703185";
+    var serviceWorkerVersion = "1107169845";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
