--- a/index.html
+++ b/index.html
@@ -4,19 +4,11 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6siZmewMd8d1aAzvui1QAgHF7jClN828"></script>
 <head>
  
-  <!-- <base href="/"> -->
-
-
   <!-- Social Media Meta Tags -->
   <meta property="og:title" content="Ecoinsoft">
   <meta property="og:description" content="We provide cutting-edge and effective solutions for your business. Transform your business into a digitalization hub and innovation. Make the IT simple">
-  <meta property="og:image" content="URL to Your Image">
-  <meta property="og:url" content="URL to Your Webpage">
-
-  <meta property="og:title" content="Ecoinsoft">
-  <meta property="og:description" content="We provide cutting-edge and effective solutions for your business. Transform your business into a digitalization hub and innovation. Make the IT simple">
   <meta property="og:image" content="icons/langding.png">
-  <meta property="og:url" content="https://simkosal.github.io/Company-Website/#/">
+  <meta property="og:url" content="http://test.ecoinsoft.com:8719/">
   <meta property="og:type" content="website">
 
   <meta charset="UTF-8">
@@ -27,25 +19,22 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Ecoinsoft">
-  <link rel="apple-touch-icon" href="icons/android-chrome-192x192.png">
+  <link rel="apple-touch-icon" href="icons/icon-192x192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.ico"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>Ecoinsoft</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
-    // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "1107169845";
+    var serviceWorkerVersion = "346458032";
   </script>
-  <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
     window.addEventListener('load', function(ev) {
-      // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
